Fix Overflow-Issue

--- a/css/main.sass
+++ b/css/main.sass
@@ -421,6 +421,7 @@ body
       -webkit-hyphens: auto
       -moz-hyphens: auto
       hyphens: auto
+      overflow-wrap: break-word
     a
       color: #333
       text-decoration: underline
